crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__handle_params.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/handle_params.json
---
{
  "sourceFileName": "handle_params.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "descriptorHandle",
            "fieldName": "tex",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "shape": "sampler2D"
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": 1
  }
}
