crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__pointer_params.comp.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/pointer_params.comp.json
---
{
  "sourceFileName": "pointer_params.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "pointer",
            "fieldName": "data",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "pointeeType": {
              "typeName": "PtrItem",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 8,
                    "size": 4
                  },
                  "scalarType": "float32"
                }
              ]
            },
            "pointeeSize": 16,
            "access": "readWrite"
          },
          {
            "kind": "pointer",
            "fieldName": "src",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 8
            },
            "pointeeType": {
              "typeName": "PtrItem",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 8,
                    "size": 4
                  },
                  "scalarType": "float32"
                }
              ]
            },
            "pointeeSize": 16,
            "access": "read"
          },
          {
            "kind": "pointer",
            "fieldName": "lut",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 8
            },
            "pointeeType": {
              "typeName": "PtrItem",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "scalar",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 8,
                    "size": 4
                  },
                  "scalarType": "float32"
                }
              ]
            },
            "pointeeSize": 16,
            "access": "immutable"
          },
          {
            "kind": "scalar",
            "fieldName": "count",
            "binding": {
              "kind": "uniform",
              "offset": 24,
              "size": 4
            },
            "scalarType": "uint32"
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    64,
    1,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 32
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": null
  }
}
