crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__push_constants.comp.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/push_constants.comp.json
---
{
  "sourceFileName": "push_constants.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "tint",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 16
            },
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    },
    {
      "kind": "pushConstant",
      "parameterName": "dispatchConstants",
      "elementType": {
        "typeName": "DispatchConstants",
        "fields": [
          {
            "kind": "scalar",
            "fieldName": "scale",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "descriptorHandle",
            "fieldName": "tex",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 8
            },
            "shape": "sampler2D"
          },
          {
            "kind": "descriptorHandle",
            "fieldName": "target",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 8
            },
            "shape": "rwTexture2D"
          },
          {
            "kind": "struct",
            "fieldName": "inner",
            "binding": {
              "kind": "uniform",
              "offset": 24,
              "size": 8
            },
            "structType": {
              "typeName": "DispatchInner",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "v",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 8
                  },
                  "elementCount": 2,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "scalar",
            "fieldName": "tail",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "matrix",
            "fieldName": "model",
            "binding": {
              "kind": "uniform",
              "offset": 48,
              "size": 64
            },
            "rowCount": 4,
            "columnCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      },
      "elementSize": 112
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    8,
    8,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": [
      {
        "stageFlags": "all",
        "offset": 0,
        "size": 112
      }
    ],
    "bindlessHeapSet": 1
  }
}
